# omm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: benchmark_utils.h  benchmark_utils.hpp  memcpy_benchmarks.cpp
cmake/: CheckAVX512.cmake
extras/: manage_cpu_scaling.sh  manage_thp.sh  print_project_structure.sh
include/omm/: memcpy.h
include/omm/detail/: cpu_features.h  cpu_features.hpp
include/omm/detail/memcpy/: memcpy_avx2.h  memcpy_avx512.h
include/omm/memcpy/: memcpy.hpp  memcpy_avx2.hpp  memcpy_avx512.hpp  memcpy_impl.hpp
tests/: memcpy_tests.cpp
